--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
 					<a class="btn primary" href="#contact">Work with me</a>
 					<a class="btn ghost" href="mailto:gebawak@gmail.com">Email</a>
 					<a class="btn ghost" href="https://linkedin.com/in/ebawakgebisa" target="_blank" rel="noreferrer">LinkedIn</a>
+					<a class="btn ghost" href="https://github.com/ebu0g" target="_blank" rel="noreferrer">GitHub</a>
 				</div>
 			</div>
 			<div class="hero-card">
@@ -100,6 +101,7 @@
 					<div class="tags">
 						<span>Flutter</span><span>Dart</span><span>Firebase</span><span>Realtime DB/Firestore</span>
 					</div>
+					<a class="card-link" href="https://github.com/ebu0g/Felagi" target="_blank" rel="noreferrer">GitHub</a>
 				</article>
 				<article class="card">
 					<h3>Negarit Disaster Management</h3>
@@ -114,6 +116,7 @@
 					<div class="tags">
 						<span>React</span><span>JavaScript</span><span>UI</span>
 					</div>
+					<a class="card-link" href="https://github.com/ebu0g/final-project" target="_blank" rel="noreferrer">GitHub</a>
 				</article>
 				<article class="card">
 					<h3>Airplane Management System</h3>
@@ -121,6 +124,7 @@
 					<div class="tags">
 						<span>C++</span><span>SQLite</span><span>Scheduling</span>
 					</div>
+					<a class="card-link" href="https://github.com/ebu0g/project-t" target="_blank" rel="noreferrer">GitHub</a>
 				</article>
 				<article class="card">
 					<h3>MOVIX · Movie Ticketing System</h3>
@@ -128,6 +132,7 @@
 					<div class="tags">
 						<span>JavaFX</span><span>Java</span><span>UI Design</span>
 					</div>
+					<a class="card-link" href="https://github.com/ebu0g/ap" target="_blank" rel="noreferrer">GitHub</a>
 				</article>
 				<article class="card">
 					<h3>Department Network Recommendation Tool</h3>
@@ -135,6 +140,15 @@
 					<div class="tags">
 						<span>HTML</span><span>CSS</span><span>JavaScript</span><span>PHP</span>
 					</div>
+					<a class="card-link" href="https://github.com/ebu0g/Ip2-project" target="_blank" rel="noreferrer">GitHub</a>
+				</article>
+				<article class="card">
+					<h3>IETP · Reverse Vending Machine</h3>
+					<p class="body">IETP project implementing a reverse vending machine interface. Role: Frontend development (UI and interactions).</p>
+					<div class="tags">
+						<span>HTML</span><span>CSS</span><span>JavaScript</span><span>IETP</span>
+					</div>
+					<a class="card-link" href="https://github.com/ebu0g/IETP" target="_blank" rel="noreferrer">GitHub</a>
 				</article>
 			</div>
 		</section>
@@ -180,14 +194,17 @@
 				<article class="card">
 					<h3>Front-End Development Certificate</h3>
 					<p class="body">ALX Africa — Responsive, dynamic web apps with React, HTML, CSS, JavaScript.</p>
+					<a class="card-link" href="https://drive.google.com/file/d/1_U3xsDAR--qMFxpnWQhSv5E6sh_dRYLz/view?usp=sharing" target="_blank" rel="noreferrer">View certificate</a>
 				</article>
 				<article class="card">
 					<h3>AI Career Essentials</h3>
 					<p class="body">ALX Africa — AI-augmented professional development and communication.</p>
+					<a class="card-link" href="https://drive.google.com/file/d/1I07WkGHCtNyBae4pSOiWMMWsREjLUIBw/view?usp=sharing" target="_blank" rel="noreferrer">View certificate</a>
 				</article>
 				<article class="card">
-					<h3>Professional Development Skills for the Digital Age</h3>
-					<p class="body">ALX Africa — Communication, productivity, adaptability for modern teams.</p>
+					<h3>Professional Foundations Course</h3>
+					<p class="body">ALX Africa — Pre-frontend foundations covering professional skills, communication, productivity, and collaboration basics.</p>
+					<a class="card-link" href="https://drive.google.com/file/d/19OtRl7XP9T9Xg5mgspktqATqoVZ_mqsj/view?usp=sharing" target="_blank" rel="noreferrer">View certificate</a>
 				</article>
 				<article class="card">
 					<h3>INSA Summer Camp Certificate</h3>
@@ -208,6 +225,7 @@
 						<a href="mailto:gebawak@gmail.com" class="link">gebawak@gmail.com</a>
 						<a href="tel:+251909004058" class="link">+251 909 004 058</a>
 						<a href="https://linkedin.com/in/ebawakgebisa" target="_blank" rel="noreferrer" class="link">LinkedIn</a>
+						<a href="https://github.com/ebu0g" target="_blank" rel="noreferrer" class="link">GitHub</a>
 					</div>
 				</div>
 				<form id="contact-form" class="card form-card">
