--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
 		<p>© <span id="year"></span> Ebawak Gebisa · Built with care.</p>
 	</footer>
 
-	<script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
+	<script type="text/javascript" src="https://cdn.emailjs.com/dist/email.min.js"></script>
 	<script src="script.js"></script>
 </body>
 </html>
