--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
 					</label>
 					<label>
 						Message
-						<textarea name="message" rows="4" required></textarea>
+						<textarea name="message" required></textarea>
 					</label>
 					<button type="submit" class="btn primary">Send message</button>
 					<p id="form-status" class="form-status" role="status"></p>
